Fix issue with dropdown fields flickering upon hover.

--- a/styles/sass/partials/_fields.scss
+++ b/styles/sass/partials/_fields.scss
@@ -130,7 +130,8 @@ input.upfront-field-text:hover,
 	opacity: 0.75;
 }
 .upfront-field-wrap-select:hover {
-	opacity: 0.85;
+	/* Causes flickering issues */
+	/* opacity: 0.85; */
 }
 .upfront-field-wrap-select-expanded {
 	opacity: 1;
